add Visualization — spacet-SNE

--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -9395,6 +9395,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization — PCA: Display clusters in 2D space"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -9505,7 +9512,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualization — Display clusters in 2D space"
+    "Visualization — spacet-SNE: Display clusters in 2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import TSNE\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from typing import Dict, Any\n",
+    "\n",
+    "\n",
+    "def step4_3_plot_clusters_tsne(\n",
+    "    env_configs: Dict[str, Dict[str, Dict[str, Any]]],\n",
+    "    out_root: str = \"./artifacts/clustering\",\n",
+    "    perplexity: int = 5,\n",
+    "    early_exaggeration: int = 12,\n",
+    "    n_iter: int = 1500,\n",
+    "    verbose: bool = True,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Draw 2D t-SNE visualization for final KMeans clusters.\n",
+    "    \n",
+    "    Saves figure as:\n",
+    "        <out_root>/<ep>/<topology>/<scenario>/cluster_plot_tsne.png\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for ep_name, by_topo in env_configs.items():\n",
+    "        for topo_name, by_scen in by_topo.items():\n",
+    "            for scen_name, env_cfg in by_scen.items():\n",
+    "\n",
+    "                clust = env_cfg.get(\"clustering\", {})\n",
+    "                feats = clust.get(\"features\", None)\n",
+    "                final = clust.get(\"final\", None)\n",
+    "\n",
+    "                if feats is None or \"X\" not in feats:\n",
+    "                    continue\n",
+    "                if final is None or \"labels\" not in final:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[t-SNE/skip] {ep_name}/{topo_name}/{scen_name}: no cluster labels.\")\n",
+    "                    continue\n",
+    "\n",
+    "                X = feats[\"X\"]\n",
+    "                labels = final[\"labels\"]\n",
+    "                K = final[\"K\"]\n",
+    "\n",
+    "                n_agents = X.shape[0]\n",
+    "                if n_agents <= perplexity:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[t-SNE/skip] {ep_name}/{topo_name}/{scen_name}: \"\n",
+    "                              f\"n_agents={n_agents} <= perplexity={perplexity}\")\n",
+    "                    continue\n",
+    "\n",
+    "                # ----- Run t-SNE -----\n",
+    "                tsne = TSNE(\n",
+    "                    n_components=2,\n",
+    "                    perplexity=perplexity,\n",
+    "                    early_exaggeration=early_exaggeration,\n",
+    "                    n_iter=n_iter,\n",
+    "                    init='pca',\n",
+    "                    learning_rate='auto',\n",
+    "                    random_state=42,\n",
+    "                    metric='euclidean'\n",
+    "                )\n",
+    "\n",
+    "                X_2d = tsne.fit_transform(X)\n",
+    "\n",
+    "                # ----- Plot -----\n",
+    "                out_dir = os.path.join(out_root, ep_name, topo_name, scen_name)\n",
+    "                os.makedirs(out_dir, exist_ok=True)\n",
+    "                out_path = os.path.join(out_dir, \"cluster_plot_tsne.png\")\n",
+    "\n",
+    "                plt.figure(figsize=(6, 5))\n",
+    "\n",
+    "                for cl in np.unique(labels):\n",
+    "                    mask = (labels == cl)\n",
+    "                    plt.scatter(\n",
+    "                        X_2d[mask, 0],\n",
+    "                        X_2d[mask, 1],\n",
+    "                        label=f\"Cluster {cl}\",\n",
+    "                        s=50,\n",
+    "                        alpha=0.8\n",
+    "                    )\n",
+    "\n",
+    "                plt.title(f\"t-SNE Clusters: {ep_name} / {topo_name} / {scen_name}  (K={K})\")\n",
+    "                plt.xlabel(\"t-SNE Dim 1\")\n",
+    "                plt.ylabel(\"t-SNE Dim 2\")\n",
+    "                plt.grid(True)\n",
+    "                plt.legend()\n",
+    "\n",
+    "                plt.tight_layout()\n",
+    "                plt.savefig(out_path, dpi=150)\n",
+    "                plt.close()\n",
+    "\n",
+    "                if verbose:\n",
+    "                    print(f\"[t-SNE] Saved t-SNE cluster plot → {out_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\clustered\\heavy\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\clustered\\light\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\clustered\\moderate\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\heavy\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\light\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\moderate\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\heavy\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\light\\cluster_plot_tsne.png\n",
+      "[t-SNE] Saved t-SNE cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\moderate\\cluster_plot_tsne.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "step4_3_plot_clusters_tsne(env_configs, verbose=True)\n"
    ]
   },
   {
