--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -9636,14 +9636,337 @@
     }
    ],
    "source": [
-    "step4_3_plot_clusters_tsne(env_configs, verbose=True)\n"
+    "step4_3_plot_clusters_tsne(env_configs, verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> 4.4. Store cluster labels </h3>"
+    "<h3> 4.4. Cluster Interpretation & Profiling </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interpretation, Summaries, and Cluster Profiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_cluster_profiles_for_env(\n",
+    "    ep_name: str,\n",
+    "    topo_name: str,\n",
+    "    scen_name: str,\n",
+    "    env_cfg: Dict[str, Any],\n",
+    "    out_root: str = \"./artifacts/clustering\"\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Build cluster representative profiles using:\n",
+    "      - labels from Step 4.3 (env_cfg['clustering']['final'])\n",
+    "      - scaled centers from Step 4.3\n",
+    "      - inverse-transformed centers using scaler from Step 4.1\n",
+    "      - agent_profiles from Step 3\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 1) Extract dependencies\n",
+    "    # ---------------------------\n",
+    "    clust = env_cfg.get(\"clustering\", {})\n",
+    "    feats = clust.get(\"features\", None)\n",
+    "    final = clust.get(\"final\", None)   # ← این مهمه\n",
+    "\n",
+    "    if feats is None or \"X\" not in feats:\n",
+    "        raise ValueError(f\"[4.4] Missing features for {ep_name}/{topo_name}/{scen_name}\")\n",
+    "\n",
+    "    if final is None or \"labels\" not in final or \"centers\" not in final:\n",
+    "        raise ValueError(\n",
+    "            f\"[4.4] Missing final KMeans results for {ep_name}/{topo_name}/{scen_name}. \"\n",
+    "            f\"Did you forget to run Step 4.3?\"\n",
+    "        )\n",
+    "\n",
+    "    best_K = int(final[\"K\"])\n",
+    "    labels = np.asarray(final[\"labels\"], dtype=int)\n",
+    "    centers_scaled = np.asarray(final[\"centers\"], dtype=float)\n",
+    "\n",
+    "    agent_ids = feats[\"agent_ids\"]\n",
+    "    scaler = feats[\"scaler\"]\n",
+    "    feature_cols = feats[\"feature_cols\"]\n",
+    "\n",
+    "    prof = env_cfg[\"agent_profiles\"].copy()\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 2) Build assignment table\n",
+    "    # ---------------------------\n",
+    "    assign_df = pd.DataFrame({\n",
+    "        \"agent_id\": agent_ids,\n",
+    "        \"cluster_id\": labels\n",
+    "    })\n",
+    "\n",
+    "    prof = prof.merge(assign_df, on=\"agent_id\", how=\"left\")\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 3) Cluster-level summary\n",
+    "    # ---------------------------\n",
+    "    numeric_cols = prof.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "\n",
+    "    cluster_summary = (\n",
+    "        prof[numeric_cols]\n",
+    "        .groupby(\"cluster_id\")\n",
+    "        .mean()\n",
+    "        .reset_index()\n",
+    "        .sort_values(\"cluster_id\")\n",
+    "    )\n",
+    "\n",
+    "    cluster_sizes = prof.groupby(\"cluster_id\")[\"agent_id\"].count().rename(\"n_agents_cluster\")\n",
+    "    cluster_summary = cluster_summary.merge(\n",
+    "        cluster_sizes.reset_index(), on=\"cluster_id\", how=\"left\"\n",
+    "    )\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 4) Decode centroids back to original scale\n",
+    "    # ---------------------------\n",
+    "    if scaler is not None:\n",
+    "        centers_original = scaler.inverse_transform(centers_scaled)\n",
+    "    else:\n",
+    "        centers_original = centers_scaled.copy()\n",
+    "\n",
+    "    centroids_scaled_df = pd.DataFrame(centers_scaled, columns=feature_cols)\n",
+    "    centroids_scaled_df.insert(0, \"cluster_id\", np.arange(best_K))\n",
+    "\n",
+    "    centroids_original_df = pd.DataFrame(centers_original, columns=feature_cols)\n",
+    "    centroids_original_df.insert(0, \"cluster_id\", np.arange(best_K))\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 5) Save to disk\n",
+    "    # ---------------------------\n",
+    "    out_dir = os.path.join(out_root, ep_name, topo_name, scen_name)\n",
+    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "\n",
+    "    assign_path    = os.path.join(out_dir, \"cluster_assignments.csv\")\n",
+    "    summary_path   = os.path.join(out_dir, \"cluster_summary.csv\")\n",
+    "    cent_sc_path   = os.path.join(out_dir, \"centroids_scaled.csv\")\n",
+    "    cent_orig_path = os.path.join(out_dir, \"centroids_original.csv\")\n",
+    "\n",
+    "    assign_df.to_csv(assign_path, index=False)\n",
+    "    cluster_summary.to_csv(summary_path, index=False)\n",
+    "    centroids_scaled_df.to_csv(cent_sc_path, index=False)\n",
+    "    centroids_original_df.to_csv(cent_orig_path, index=False)\n",
+    "\n",
+    "    print(f\"[4.4] {ep_name}/{topo_name}/{scen_name} → cluster profiles built.\")\n",
+    "    print(cluster_sizes)\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 6) Attach final results\n",
+    "    # ---------------------------\n",
+    "    env_cfg[\"clustering\"][\"profiles\"] = {\n",
+    "        \"K\": best_K,\n",
+    "        \"cluster_assignments\": assign_df,\n",
+    "        \"cluster_summary\": cluster_summary,\n",
+    "        \"centroids_scaled_df\": centroids_scaled_df,\n",
+    "        \"centroids_original_df\": centroids_original_df,\n",
+    "        \"centroids_scaled\": centers_scaled,\n",
+    "        \"centroids_original\": centers_original,\n",
+    "    }\n",
+    "\n",
+    "    return env_cfg[\"clustering\"][\"profiles\"]\n",
+    "\n",
+    "def build_all_cluster_profiles(env_configs):\n",
+    "    out = {}\n",
+    "    for ep_name, by_topo in env_configs.items():\n",
+    "        out[ep_name] = {}\n",
+    "        for topo_name, by_scen in by_topo.items():\n",
+    "            out[ep_name][topo_name] = {}\n",
+    "            for scen_name, env_cfg in by_scen.items():\n",
+    "                try:\n",
+    "                    prof = build_cluster_profiles_for_env(\n",
+    "                        ep_name, topo_name, scen_name, env_cfg\n",
+    "                    )\n",
+    "                    out[ep_name][topo_name][scen_name] = prof\n",
+    "                except Exception as e:\n",
+    "                    print(f\"[4.4/warn] skipping {ep_name}/{topo_name}/{scen_name}: {e}\")\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.4] ep_000/clustered/heavy → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    16\n",
+      "1     2\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/clustered/light → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    7\n",
+      "1    6\n",
+      "2    5\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/clustered/moderate → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    10\n",
+      "1     4\n",
+      "2     3\n",
+      "3     1\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/full_mesh/heavy → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    16\n",
+      "1     2\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/full_mesh/light → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    7\n",
+      "1    6\n",
+      "2    5\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/full_mesh/moderate → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    10\n",
+      "1     4\n",
+      "2     3\n",
+      "3     1\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/sparse_ring/heavy → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    16\n",
+      "1     2\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/sparse_ring/light → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    7\n",
+      "1    6\n",
+      "2    5\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "[4.4] ep_000/sparse_ring/moderate → cluster profiles built.\n",
+      "cluster_id\n",
+      "0    10\n",
+      "1     4\n",
+      "2     3\n",
+      "3     1\n",
+      "Name: n_agents_cluster, dtype: int64\n",
+      "\n",
+      "=== EXAMPLE: cluster summary for ep_000 / clustered / heavy ===\n",
+      "K = 2\n",
+      "\n",
+      "Cluster summary (first few cols):\n",
+      "   cluster_id  agent_id       f_local  f_local_slot      m_local  lambda_mean  \\\n",
+      "0           0       8.0  1.381501e+09  1.381501e+09  5483.854997     1.262798   \n",
+      "1           1      12.5  1.931611e+09  1.931611e+09  3852.151616     1.163105   \n",
+      "\n",
+      "   lambda_var  slots_observed  n_tasks_agent  TaskDist_sum  \n",
+      "0    0.286406          1367.5      1766.9375           1.0  \n",
+      "1    0.171461          1012.5      1182.5000           1.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---- Run Step 4.4 on all environments ----\n",
+    "cluster_profiles = build_all_cluster_profiles(env_configs)\n",
+    "\n",
+    "print(\"\\n=== EXAMPLE: cluster summary for ep_000 / clustered / heavy ===\")\n",
+    "ex_ep   = \"ep_000\"\n",
+    "ex_topo = \"clustered\"\n",
+    "ex_scen = \"heavy\"\n",
+    "\n",
+    "if (ex_ep in cluster_profiles and\n",
+    "    ex_topo in cluster_profiles[ex_ep] and\n",
+    "    ex_scen in cluster_profiles[ex_ep][ex_topo]):\n",
+    "\n",
+    "    ex_prof = cluster_profiles[ex_ep][ex_topo][ex_scen]\n",
+    "    print(\"K =\", ex_prof[\"K\"])\n",
+    "    print(\"\\nCluster summary (first few cols):\")\n",
+    "    print(ex_prof[\"cluster_summary\"].iloc[:, :10])\n",
+    "else:\n",
+    "    print(\"[warn] Example triple not found in cluster_profiles.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final Structure of env_configs:\n",
+    "\n",
+    "env_configs[ep][topo][scen][\"clustering\"] = {</br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "\"features\": {...},\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;# from step 4.1</br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "\"k_selection\": {...},\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;# from step 4.2</br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "\"final\": {...},\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;# from step 4.3</br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "\"profiles\": {...},\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;# from step 4.4</br>\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['features', 'k_selection', 'final', 'profiles'])\n",
+      "   cluster_id  agent_id       f_local  f_local_slot      m_local  lambda_mean  \\\n",
+      "0           0       8.0  1.381501e+09  1.381501e+09  5483.854997     1.262798   \n",
+      "1           1      12.5  1.931611e+09  1.931611e+09  3852.151616     1.163105   \n",
+      "\n",
+      "   lambda_var  slots_observed  n_tasks_agent  TaskDist_sum  ...    mem_med  \\\n",
+      "0    0.286406          1367.5      1766.9375           1.0  ...  64.054253   \n",
+      "1    0.171461          1012.5      1182.5000           1.0  ...  62.619287   \n",
+      "\n",
+      "   hard_share  P_general  P_latency_sensitive  P_deadline_hard  \\\n",
+      "0    0.348764   0.182743                  0.0         0.348764   \n",
+      "1    0.340124   0.203982                  0.0         0.340124   \n",
+      "\n",
+      "   P_data_intensive  P_compute_intensive  non_atomic_share  mec_id  \\\n",
+      "0          0.093802             0.374692          0.446844     8.0   \n",
+      "1          0.102209             0.353686          0.452630    12.5   \n",
+      "\n",
+      "   n_agents_cluster  \n",
+      "0                16  \n",
+      "1                 2  \n",
+      "\n",
+      "[2 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = env_configs[\"ep_000\"][\"clustered\"][\"heavy\"][\"clustering\"]\n",
+    "print(test.keys())\n",
+    "\n",
+    "print(env_configs[\"ep_000\"][\"clustered\"][\"heavy\"][\"clustering\"][\"profiles\"][\"cluster_summary\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heatmap"
    ]
   },
   {
@@ -9651,7 +9974,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "def plot_cluster_profile_heatmap(env_cfg,\n",
+    "                                 ep_name: str,\n",
+    "                                 topo_name: str,\n",
+    "                                 scen_name: str,\n",
+    "                                 out_root=\"./artifacts/clustering\"):\n",
+    "    \"\"\"\n",
+    "    Draw heatmap of cluster profile means for a given env_cfg.\n",
+    "\n",
+    "    Uses:\n",
+    "        env_cfg[\"clustering\"][\"profiles\"][\"cluster_summary\"]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 1) Extract cluster profiles\n",
+    "    # ---------------------------\n",
+    "    clust = env_cfg.get(\"clustering\", {})\n",
+    "    profs = clust.get(\"profiles\", None)\n",
+    "\n",
+    "    if profs is None or \"cluster_summary\" not in profs:\n",
+    "        print(f\"[heatmap/skip] No cluster profiles for {ep_name}/{topo_name}/{scen_name}\")\n",
+    "        return None\n",
+    "\n",
+    "    cluster_summary = profs[\"cluster_summary\"].copy()\n",
+    "    K = profs[\"K\"]\n",
+    "\n",
+    "    # remove non-feature columns if present\n",
+    "    drop_cols = [\"cluster_id\", \"n_agents_cluster\"]\n",
+    "    feature_cols = [c for c in cluster_summary.columns if c not in drop_cols]\n",
+    "\n",
+    "    df = cluster_summary[feature_cols].copy()\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 2) Normalize per-column\n",
+    "    # ---------------------------\n",
+    "    df_norm = (df - df.min()) / (df.max() - df.min() + 1e-9)\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 3) Output directory\n",
+    "    # ---------------------------\n",
+    "    out_dir = os.path.join(out_root, ep_name, topo_name, scen_name)\n",
+    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "    out_path = os.path.join(out_dir, \"cluster_profile_heatmap.png\")\n",
+    "\n",
+    "    # ---------------------------\n",
+    "    # 4) Plot heatmap\n",
+    "    # ---------------------------\n",
+    "    plt.figure(figsize=(14, 6))\n",
+    "    sns.heatmap(\n",
+    "        df_norm,\n",
+    "        annot=False,\n",
+    "        cmap=\"viridis\",\n",
+    "        xticklabels=df_norm.columns,\n",
+    "        yticklabels=[f\"Cluster {i}\" for i in range(K)]\n",
+    "    )\n",
+    "\n",
+    "    plt.title(f\"Cluster Profile Heatmap: {ep_name}/{topo_name}/{scen_name}\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(out_path, dpi=150)\n",
+    "    plt.close()\n",
+    "\n",
+    "    print(f\"[heatmap] Saved → {out_path}\")\n",
+    "    return out_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ep in env_configs:\n",
+    "    for topo in env_configs[ep]:\n",
+    "        for scen in env_configs[ep][topo]:\n",
+    "            plot_cluster_profile_heatmap(\n",
+    "                env_configs[ep][topo][scen],\n",
+    "                ep, topo, scen\n",
+    "            )"
+   ]
   },
   {
    "cell_type": "markdown",
