Heatmap for cluster centers added

--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -9971,7 +9971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10048,9 +10048,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\clustered\\heavy\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\clustered\\light\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\clustered\\moderate\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\full_mesh\\heavy\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\full_mesh\\light\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\full_mesh\\moderate\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\sparse_ring\\heavy\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\sparse_ring\\light\\cluster_profile_heatmap.png\n",
+      "[heatmap] Saved → ./artifacts/clustering\\ep_000\\sparse_ring\\moderate\\cluster_profile_heatmap.png\n"
+     ]
+    }
+   ],
    "source": [
     "for ep in env_configs:\n",
     "    for topo in env_configs[ep]:\n",
