adding cluster_id to tasks in step 4.4

--- a/Data_Generator/data_generator.ipynb
+++ b/Data_Generator/data_generator.ipynb
@@ -622,7 +622,12 @@
     "# task features\n",
     "# -------------------------\n",
     "def _modality_choice(rng: np.random.Generator, d: TaskFeatureDist) -> str:\n",
-    "    labels = d.modality_labels or [\"image\", \"video\", \"text\", \"sensor\"]\n",
+    "    # labels = d.modality_labels or [\"image\", \"video\", \"text\", \"sensor\"]\n",
+    "    if d.modality_labels is None:\n",
+    "        labels = [\"image\", \"video\", \"text\", \"sensor\"]\n",
+    "    else:\n",
+    "        labels = d.modality_labels\n",
+    "\n",
     "    if d.modality_probs is None:\n",
     "        probs = [0.3, 0.2, 0.3, 0.2]\n",
     "    else:\n",
@@ -1190,9 +1195,13 @@
     "        if ((tasks_df[\"split_ratio\"] < 0) | (tasks_df[\"split_ratio\"] > 1)).any():\n",
     "            print(f\"    [WARN] split_ratio out of [0,1] range in '{scen}'\")\n",
     "        # non_atomic=0 => split_ratio==0\n",
-    "        non_atomic_zero = tasks_df[\"non_atomic\"] == 0\n",
-    "        if (tasks_df.loc[non_atomic_zero, \"split_ratio\"] != 0).any():\n",
-    "            print(f\"    [WARN] non_atomic==0 but split_ratio != 0 in '{scen}'\")\n",
+    "        mask = tasks_df[\"non_atomic\"] == 0\n",
+    "        if (~np.isclose(tasks_df.loc[mask, \"split_ratio\"], 0.0)).any():\n",
+    "            print(f\"    [WARN] non_atomic==0 but split_ratio != 0 (float mismatch) in '{scen}'\")\n",
+    "            \n",
+    "        # non_atomic_zero = tasks_df[\"non_atomic\"] == 0\n",
+    "        # if (tasks_df.loc[non_atomic_zero, \"split_ratio\"] != 0).any():\n",
+    "        #     print(f\"    [WARN] non_atomic==0 but split_ratio != 0 in '{scen}'\")\n",
     "\n",
     "        # 5) rough lambda consistency check (using decision horizon length)\n",
     "        if len(episodes_df):\n",
