Step 5.1 - State Construction & Step 5.2 - Action Semantics (Contextual Bandit)

--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -7978,6 +7978,238 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "V03"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The OffloadingEnv class is responsible for managing environment state, queues, task processing, and interacting with reinforcement learning algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 5.1 — Initialization\n",
+    "\n",
+    "Step 5.2 — State Builder\n",
+    "\n",
+    "Step 5.3 — Action Handling\n",
+    "\n",
+    "Step 5.4 — Queue & Execution Update\n",
+    "\n",
+    "Step 5.5 — Reward Calculation\n",
+    "\n",
+    "Step 5.6 — Done / Episode Horizon\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Step 5.1 - State Construction\n",
+    "\n",
+    "class OffloadingEnv:\n",
+    "    def __init__(self, env_cfg):\n",
+    "        self.env_cfg = env_cfg\n",
+    "        self.delta = env_cfg[\"Delta\"]\n",
+    "        self.t_slots = env_cfg[\"T_slots\"]\n",
+    "        self.agent_profiles = env_cfg[\"agent_profiles\"]\n",
+    "        \n",
+    "        # Initialize the queues for each agent\n",
+    "        self.queues = {agent_id: {'local': [], 'mec': [], 'cloud': []} for agent_id in self.agent_profiles[\"agent_id\"]}\n",
+    "        \n",
+    "        # Initialize other environment variables like CPU/memory\n",
+    "        self.cpu_capacity = env_cfg[\"private_cpu\"]\n",
+    "        self.cloud_capacity = env_cfg[\"cloud_cpu\"]\n",
+    "        \n",
+    "        # Initialize the algorithm mapping for each cluster\n",
+    "        self.algo_map = self.assign_algorithms_to_clusters()\n",
+    "\n",
+    "    def assign_algorithms_to_clusters(self):\n",
+    "        \"\"\"\n",
+    "        Assign RL algorithms to clusters based on their profiles.\n",
+    "        \"\"\"\n",
+    "        algo_map = {}\n",
+    "        for cluster_id, cluster_profile in self.env_cfg[\"clustering\"][\"profiles\"].items():\n",
+    "            algo_type = select_algo_for_cluster(cluster_profile)\n",
+    "            algo_map[cluster_id] = {\"type\": algo_type, \"agent\": None}\n",
+    "        return algo_map\n",
+    "\n",
+    "    def reset(self):\n",
+    "        \"\"\"Reset the environment for a new episode.\"\"\"\n",
+    "        for agent_id in self.queues:\n",
+    "            self.queues[agent_id] = {'local': [], 'mec': [], 'cloud': []}\n",
+    "        return self._get_state()\n",
+    "\n",
+    "    def step(self, actions):\n",
+    "        \"\"\"\n",
+    "        Perform one step in the environment for each agent.\n",
+    "        actions: dict of {agent_id: action}\n",
+    "        \"\"\"\n",
+    "        # Update the queues based on actions\n",
+    "        for agent_id, action in actions.items():\n",
+    "            if action == 0:  # LOCAL\n",
+    "                # Add task to local queue\n",
+    "                self.queues[agent_id]['local'].append(self._get_task(agent_id))\n",
+    "            elif action == 1:  # MEC\n",
+    "                # Add task to MEC queue\n",
+    "                self.queues[agent_id]['mec'].append(self._get_task(agent_id))\n",
+    "            elif action == 2:  # CLOUD\n",
+    "                # Add task to Cloud queue\n",
+    "                self.queues[agent_id]['cloud'].append(self._get_task(agent_id))\n",
+    "\n",
+    "        # Process tasks in queues (FIFO)\n",
+    "        self._process_queues()\n",
+    "\n",
+    "        # Calculate reward for each agent based on task completions, delays, etc.\n",
+    "        rewards = self._calculate_rewards()\n",
+    "\n",
+    "        # Update state\n",
+    "        next_state = self._get_state()\n",
+    "\n",
+    "        # Check if episode is done (based on T_slots)\n",
+    "        done = self._check_done()\n",
+    "\n",
+    "        return next_state, rewards, done, {}\n",
+    "\n",
+    "    def _process_queues(self):\n",
+    "        \"\"\"Process tasks in the queues.\"\"\"\n",
+    "        for agent_id, queues in self.queues.items():\n",
+    "            for queue_name, queue in queues.items():\n",
+    "                # Process tasks in FIFO order and check if any tasks are completed\n",
+    "                if queue:\n",
+    "                    task = queue.pop(0)  # Process the first task in the queue\n",
+    "                    # Update task completion (this can be expanded with actual processing logic)\n",
+    "                    self._task_complete(agent_id, task, queue_name)\n",
+    "\n",
+    "    def _task_complete(self, agent_id, task, queue_name):\n",
+    "        \"\"\"Handle task completion (can be expanded with delay/drop logic).\"\"\"\n",
+    "        print(f\"Task completed for agent {agent_id} in {queue_name} queue.\")\n",
+    "        # Here you can implement delay or drop logic if required.\n",
+    "\n",
+    "    def _calculate_rewards(self):\n",
+    "        \"\"\"Calculate reward based on task delays, drop rates, etc.\"\"\"\n",
+    "        rewards = {}\n",
+    "        for agent_id, queues in self.queues.items():\n",
+    "            rewards[agent_id] = -1 * len(queues['local'])  # Placeholder for actual reward function\n",
+    "        return rewards\n",
+    "\n",
+    "    def _get_state(self):\n",
+    "        \"\"\"Return the state for each agent, which includes queue lengths, resources, etc.\"\"\"\n",
+    "        state = {}\n",
+    "        for agent_id, queues in self.queues.items():\n",
+    "            # Retrieve features from tasks and agent profile for state\n",
+    "            task_features = self._get_task_features(agent_id)\n",
+    "            agent_profile = self.agent_profiles.loc[self.agent_profiles['agent_id'] == agent_id]\n",
+    "            cluster_id = agent_profile[\"cluster_id\"].values[0]  # Assuming cluster_id exists in agent_profiles\n",
+    "            state[agent_id] = {\n",
+    "                \"local_queue_length\": len(queues['local']),\n",
+    "                \"mec_queue_length\": len(queues['mec']),\n",
+    "                \"cloud_queue_length\": len(queues['cloud']),\n",
+    "                \"task_features\": task_features,  # Features related to the current task\n",
+    "                \"agent_profile\": agent_profile,  # Agent's resource profile (lambda, etc.)\n",
+    "                \"cluster_id\": cluster_id  # Add cluster_id to the state\n",
+    "            }\n",
+    "        return state\n",
+    "\n",
+    "    def _get_task_features(self, agent_id):\n",
+    "        \"\"\"Get the current task features for the agent from the pre-generated tasks.\"\"\"\n",
+    "        tasks_df = self.env_cfg['tasks']\n",
+    "        agent_tasks = tasks_df[tasks_df['agent_id'] == agent_id]\n",
+    "        \n",
+    "        if not agent_tasks.empty:\n",
+    "            task = agent_tasks.iloc[0]\n",
+    "            task_features = {\n",
+    "                \"b_mb\": task[\"b_mb\"],\n",
+    "                \"c_cycles\": task[\"c_cycles\"],\n",
+    "                \"mem_mb\": task[\"mem_mb\"],\n",
+    "                \"rho_cyc_per_mb\": task[\"rho_cyc_per_mb\"],\n",
+    "                \"deadline_slots\": task[\"deadline_slots\"],\n",
+    "                \"task_type\": task[\"task_type\"],\n",
+    "            }\n",
+    "            return task_features\n",
+    "        else:\n",
+    "            return {}  # If no tasks for this agent, return an empty dictionary\n",
+    "\n",
+    "    def _check_done(self):\n",
+    "        \"\"\"Check if the episode is done (based on T_slots).\"\"\"\n",
+    "        return self.t_slots <= 0\n",
+    "\n",
+    "    def _generate_task(self, agent_id):\n",
+    "        \"\"\"This function is no longer needed as we are using pre-generated tasks.\"\"\"\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5.2 - Action Semantics (Contextual Bandit)\n",
+    "\n",
+    "def select_algo_for_cluster(cluster_profile):\n",
+    "    \"\"\"\n",
+    "    Select an RL algorithm for each cluster based on its profile.\n",
+    "    The profile can include information like lambda_mean, task types, etc.\n",
+    "    \"\"\"\n",
+    "    if cluster_profile[\"lambda_mean\"] > 0.5 and cluster_profile[\"P_compute_intensive\"] > 0.5:\n",
+    "        return \"PPO\"\n",
+    "    elif cluster_profile[\"lambda_mean\"] < 0.5 and cluster_profile[\"P_general\"] > 0.5:\n",
+    "        return \"DQN\"\n",
+    "    else:\n",
+    "        return \"A2C\"\n",
+    "\n",
+    "def run_contextual_bandit_for_algorithms(env_cfg):\n",
+    "    \"\"\"\n",
+    "    This function applies the Contextual Bandit method to select RL algorithms per cluster.\n",
+    "    It assigns a RL algorithm to each cluster based on the cluster's profile.\n",
+    "    \"\"\"\n",
+    "    for cluster_id, cluster_profile in env_cfg[\"clustering\"][\"profiles\"].items():\n",
+    "        algo_type = select_algo_for_cluster(cluster_profile)\n",
+    "        env_cfg[\"clustering\"][\"profiles\"][cluster_id][\"selected_algo\"] = algo_type\n",
+    "        print(f\"Cluster {cluster_id} selected algorithm: {algo_type}\")\n",
+    "    \n",
+    "    return env_cfg\n",
+    "\n",
+    "# Example usage of the bandit method:\n",
+    "env_cfg = run_contextual_bandit_for_algorithms(env_cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "V02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3> 5.1 State Space Formulation </h3>"
    ]
   },
@@ -8147,7 +8379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "اینجام"
+    "v01"
    ]
   },
   {
