Environment_generator code implementation

--- a/Data_Generator/data_generator.ipynb
+++ b/Data_Generator/data_generator.ipynb
@@ -9,6 +9,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tasks_num = 20\n",
+    "task_size_mins = 2\n",
+    "task_size_maxs = 5\n",
+    "\n",
+    "timeout_delay = 10\n",
+    "drop_penalty = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
